--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ python-multipart>=0.0.6,<1.0.0
 # Dependencias adicionales para estabilidad
 email-validator>=2.0.0
 python-dotenv>=1.0.0
+requests>=2.25.0
